# Fastapi-backend

./: .env  .env-non-dev  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: abdba6c5312b_user.py  c6b1e0a53e6c_database_creation.py
src/: database.py  main.py
src/auth/: cokkie.py  schemas.py
src/product/: enums.py  models.py  players.py  schemas.py
tests/: conftest.py  test_auth.py  test_operations.py
